<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="game_properties_clear_disc_path">Clear Disc Path</string>
    <string name="game_properties_compatibility_rating">Compatibility Rating</string>
    <string name="game_properties_crc">CRC</string>
    <string name="game_properties_disc_path">Disc Path</string>
    <string name="game_properties_last_played">Last Played</string>
    <string name="game_properties_path">Path</string>
    <string name="game_properties_region">Region</string>
    <string name="game_properties_serial">Serial</string>
    <string name="game_properties_summary_clear_disc_path">Removes any currently-set disc path.</string>
    <string name="game_properties_time_played">Time Played</string>
    <string name="game_properties_title">Title</string>
    <string name="game_properties_type">Type</string>
    <string name="game_settings_clear_settings">Clear Settings</string>
    <string name="game_settings_copy_hotkey_bindings">Copy Hotkey Bindings</string>
    <string name="game_settings_copy_settings">Copy Settings</string>
    <string name="game_settings_reset_settings">Set Optimal Settings</string>
    <string name="game_settings_reset_settings_unsafe">Set Fast Settings</string>
    <string name="game_settings_summary_clear_settings">Clears all settings set for this game.</string>
    <string name="game_settings_summary_copy_hotkey_bindings">Copies hotkey bindings to this game.</string>
    <string name="game_settings_summary_copy_settings">Copies the current global settings to this game.</string>
    <string name="game_settings_summary_reset_settings">Sets optimal defaults for this game.</string>
    <string name="game_settings_summary_reset_settings_unsafe">Sets unsafe defaults for this game.</string>
    <string name="memory_card_create_new_card">Create New Card</string>
    <string name="memory_card_import">Import Memory Card</string>
    <string name="memory_card_manage_folder_memory_cards">Folder Memory Card Filter</string>
    <string name="memory_card_manage_folder_memory_cards_summary">Simulates a larger memory card by filtering saves to only the current game.</string>
    <string name="memory_card_summary_create_new_card">Creates a new memory card.</string>
    <string name="memory_card_summary_import">Imports a memory card from storage.</string>
    <string name="memory_card_summary_swap_cards">Quick swaps the memory cards in port 1 and 2.</string>
    <string name="memory_card_swap_cards">Swap Cards</string>
    <string name="settings_achievements_category">Account</string>
    <string name="settings_achievements_challenge_indicators">Show Challenge Indicators</string>
    <string name="settings_achievements_challenge_mode">Enable Hardcore Mode</string>
    <string name="settings_achievements_disclaimer">PS2 FORGE uses RetroAchievements (retroachievements.org) as an achievement database and for tracking progress.</string>
    <string name="settings_achievements_enable">Enable RetroAchievements</string>
    <string name="settings_achievements_global_settings">Global Settings</string>
    <string name="settings_achievements_leaderboards">Enable Leaderboards</string>
    <string name="settings_achievements_login">Login</string>
    <string name="settings_achievements_logout">Logout</string>
    <string name="settings_achievements_notifications">Enable Notifications</string>
    <string name="settings_achievements_register">Register</string>
    <string name="settings_achievements_rich_presence">Enable Rich Presence</string>
    <string name="settings_achievements_sound_effects">Enable Sound Effects</string>
    <string name="settings_achievements_test_mode">Enable Test Mode</string>
    <string name="settings_achievements_token_generation_time">Token Generation Time</string>
    <string name="settings_achievements_unofficial_test_mode">Test Unofficial Achievements</string>
    <string name="settings_achievements_username">User Name</string>
    <string name="settings_achievements_view_profile">View Profile</string>
    <string name="settings_category_audio_advanced">Advanced</string>
    <string name="settings_category_controller">Controller Settings</string>
    <string name="settings_category_details">Details</string>
    <string name="settings_category_interface">Interface</string>
    <string name="settings_category_osd">On-Screen Display</string>
    <string name="settings_category_presets">Presets</string>
    <string name="settings_display_alignment">Display Alignment</string>
    <string name="settings_emulation_screen_orientation">Emulation Screen Orientation</string>
    <string name="settings_expand_to_cutout_area">Expand To Cutout Area</string>
    <string name="settings_fast_boot">Fast Boot</string>
    <string name="settings_input_profile">Input Profile</string>
    <string name="settings_osd_scale">OSD Scale</string>
    <string name="settings_patch_codes">Enable Patch Codes</string>
    <string name="settings_save_state_on_shutdown">Save State On Shutdown</string>
    <string name="settings_show_cpu_usage">Show CPU Usage</string>
    <string name="settings_show_fps">Show FPS</string>
    <string name="settings_show_frame_times">Show Frame Times</string>
    <string name="settings_show_gpu_usage">Show GPU Usage</string>
    <string name="settings_show_gs_stats">Show GS Stats</string>
    <string name="settings_show_indicators">Show Status Indicators</string>
    <string name="settings_show_inputs">Show Controller Inputs</string>
    <string name="settings_show_notifications">Show Notifications</string>
    <string name="settings_show_resolution">Show Resolution</string>
    <string name="settings_show_settings">Show Settings</string>
    <string name="settings_show_speed">Show Speed</string>
    <string name="settings_show_version_info">Show Version/Device Info</string>
    <string name="settings_summary_achievements_challenge_mode">Challenge mode for achievements, including leaderboard tracking. Disables save state, cheats, and slowdown functions.</string>
    <string name="settings_summary_achievements_enable">When enabled and logged in, PS2 FORGE will scan for achievements on startup.</string>
    <string name="settings_summary_achievements_leaderboards">Enables submission of leaderboards in hardcore mode for supported games. If disabled, you can still view leaderboards, but no scores will be uploaded.</string>
    <string name="settings_summary_achievements_login">Logs in to your account to record achievements.</string>
    <string name="settings_summary_achievements_logout">Logs out of your account. No new achievements will be recorded.</string>
    <string name="settings_summary_achievements_notifications">Displays popup messages on events such as achievement unlocks and leaderboard submissions.</string>
    <string name="settings_summary_achievements_register">Opens a link to create a new account.</string>
    <string name="settings_summary_achievements_rich_presence">Rich presence information will be collected and sent to the server where supported.</string>
    <string name="settings_summary_achievements_sound_effects">Plays sound effects for events such as achievement unlocks and leaderboard submissions.</string>
    <string name="settings_summary_achievements_test_mode">When enabled, PS2 FORGE will assume all achievements are locked and not send any unlock notifications to the server.</string>
    <string name="settings_summary_achievements_unofficial_test_mode">List and activate unofficial sets. Note that these achievements are not tracked, so they unlock every time.</string>
    <string name="settings_summary_achievements_view_profile">Opens a link to your profile.</string>
    <string name="settings_summary_challenge_indicators">Shows icons in the lower-right corner of the screen when a challenge/primed achievement is active.</string>
    <string name="settings_summary_expand_to_cutout_area">Expands the display area to include the cutout (or notch) area.</string>
    <string name="settings_summary_fast_boot">Skips the BIOS shell/intro, booting directly into the game.</string>
    <string name="settings_summary_osd_scale">Increases or decreases the size of on-screen messages/statistics.</string>
    <string name="settings_summary_patch_codes">Enables user-provided patch codes.</string>
    <string name="settings_summary_save_state_on_shutdown">Saves state when shutting down a game, enabling you to continue where you left off.</string>
    <string name="settings_summary_show_cpu_usage">Shows the CPU usage based on threads in the top-right corner of the display.</string>
    <string name="settings_summary_show_fps">Shows the number of game frames (internal frame rate) and video frames (speed) in the top-right corner of the display.</string>
    <string name="settings_summary_show_frame_times">Shows a visual history of frame times in the top-right corner of the display.</string>
    <string name="settings_summary_show_gpu_usage">Shows the host GPU usage in the top-right corner of the display (may reduce performance).</string>
    <string name="settings_summary_show_gs_stats">Shows statistics about GS (primitives, draw calls) in the top-right corner of the display.</string>
    <string name="settings_summary_show_indicators">Shows indicators when running outside normal parameters (e.g. fast forward).</string>
    <string name="settings_summary_show_inputs">Shows the current controller input state in the bottom-left corner of the screen.</string>
    <string name="settings_summary_show_messages">Shows on-screen-display messages when events occur such as save states being created/loaded, screenshots being taken, etc.</string>
    <string name="settings_summary_show_resolution">Shows the resolution the game is rendering at in the top-right corner of the display.</string>
    <string name="settings_summary_show_settings">Shows a summary of settings in the bottom-right corner of the screen.</string>
    <string name="settings_summary_show_speed">Shows the current emulation speed of the system in the top-right corner of the display as a percentage.</string>
    <string name="settings_summary_show_version_info">Shows software version and device model.</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_ui_language">UI Language</string>
</resources>